/forecast endpoint working
